force-app/main/default/objects/Polygon_Schedule__c/Polygon_Schedule__c.object-meta.xml
<CustomObject>
    <description>This is Junction Object between Authorization Location Access Schedule &amp; Polygon to correctly map the time duration of polygon.</description>
    <label>Polygon Schedule</label>
    <nameField>
        <label>Polygon Schedule Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polygon Schedules</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>