force-app/main/default/objects/Polygon_Schedule__c/fields/Authorization_Location_Access_Schedule__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Location_Access_Schedule__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Authorization Location Access Schedule</label>
    <referenceTo>AuthLocationAccessSchedule</referenceTo>
    <relationshipLabel>Polygon Schedules</relationshipLabel>
    <relationshipName>Polygon_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>