force-app/main/default/objects/Polygon_Schedule__c/fields/BLA_Id__c.field-meta.xml
<CustomField>
    <fullName>BLA_Id__c</fullName>
    <description>To hold the Id of the BLA associated with</description>
    <label>BLA Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>