force-app/main/default/objects/Polygon_Schedule__c/fields/Business_License__c.field-meta.xml
<CustomField>
    <fullName>Business_License__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is populated only when the record is approved and its associated Business License Application is also approved.</description>
    <label>Business License</label>
    <referenceTo>BusinessLicense</referenceTo>
    <relationshipLabel>Polygon Schedules</relationshipLabel>
    <relationshipName>Polygon_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>