force-app/main/default/objects/Polygon_Schedule__c/fields/Polygon__c.field-meta.xml
<CustomField>
    <fullName>Polygon__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Polygon</label>
    <referenceTo>Polygon</referenceTo>
    <relationshipLabel>Polygon Schedules</relationshipLabel>
    <relationshipName>Polygon_Schedules</relationshipName>
    <type>Lookup</type>
</CustomField>