force-app/main/default/objects/Polygon_Schedule__c/fields/Review_Completed__c.field-meta.xml
<CustomField>
    <fullName>Review_Completed__c</fullName>
    <description>This is to capture whether the Reviewer has completed the review of the record.</description>
    <formula>OR(
ISPICKVAL( Status__c, &apos;Approved&apos;),
ISPICKVAL(Status__c, &apos;Rejected&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Review Completed</label>
    <type>Checkbox</type>
</CustomField>